--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
     "@fortawesome/free-brands-svg-icons": "^6.4.2",
     "@fortawesome/free-regular-svg-icons": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@types/aos": "^3.0.7",
+    "aos": "^2.3.4",
     "bootstrap": "^5.3.3",
+    "boxicons": "^2.1.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
