--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@types/aos": "^3.0.7",
     "aos": "^2.3.4",
+    "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "boxicons": "^2.1.4",
     "rxjs": "~7.8.0",
