New Inote frontend workflow name
C’est mieux pour le badge.

--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -2,7 +2,7 @@
 # atsuhikoMochizuki
 # 08/05/2024
 ---
-name: CI/CD pipeline for Inote API
+name: Inote Frontend CI/CD
 'on':
   push:
     branches: ["main"]
