--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "@angular-devkit/build-angular": "^17.2.0",
     "@angular-eslint/builder": "17.4.1",
     "@angular-eslint/eslint-plugin": "17.4.1",
-    "@angular-eslint/eslint-plugin-template": "17.4.1",
+    "@angular-eslint/eslint-plugin-template": "^17.4.1",
     "@angular-eslint/schematics": "17.4.1",
     "@angular-eslint/template-parser": "17.4.1",
     "@angular/cli": "^17.2.0",
@@ -51,6 +51,7 @@
     "@typescript-eslint/parser": "7.8.0",
     "angular-in-memory-web-api": "^0.17.0",
     "eslint": "^8.57.0",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
     "gh-pages": "^6.1.1",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
