--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -41,7 +41,25 @@
         "plugin:@angular-eslint/template/recommended",
         "plugin:@angular-eslint/template/accessibility"
       ],
-      "rules": {}
+      "rules": {
+        "@angular-eslint/template/no-inline-styles": [
+          "warn",
+          {
+            "allowNgStyle": true,
+            "allowBindToStyle": true
+          }
+        ],
+        "@angular-eslint/template/alt-text": "warn",
+        "@angular-eslint/template/click-events-have-key-events": "warn",
+        "@angular-eslint/template/elements-content": "warn",
+        "@angular-eslint/template/interactive-supports-focus": "warn",
+        "@angular-eslint/template/label-has-associated-control": "warn",
+        "@angular-eslint/template/mouse-events-have-key-events": "warn",
+        "@angular-eslint/template/no-autofocus": "warn",
+        "@angular-eslint/template/role-has-required-aria": "warn",
+        "@angular-eslint/template/table-scope": "warn",
+        "@angular-eslint/template/valid-aria": "warn"
+      }
     }
   ]
 }
