--- a/angular.json
+++ b/angular.json
@@ -38,6 +38,7 @@
               "node_modules/aos/dist/aos.css"
             ],
             "scripts": [
+              "node_modules/@popperjs/core/dist/umd/popper.min.js",
               "node_modules/bootstrap/dist/js/bootstrap.min.js",
               "node_modules/aos/dist/aos.js"
             ]
