--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "boxicons": "^2.1.4",
+    "ngx-bootstrap-modal": "^2.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "webpack-dev-middleware": ">=6.1.2",
