--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^17.2.0",
+    "@angular/cdk": "^17.0.0",
     "@angular/common": "^17.2.0",
     "@angular/compiler": "^17.2.0",
     "@angular/core": "^17.2.0",
@@ -28,10 +29,14 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@popperjs/core": "^2.11.8",
     "@types/aos": "^3.0.7",
+    "@types/jquery": "^3.5.30",
     "aos": "^2.3.4",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "boxicons": "^2.1.4",
+    "jquery": "^3.7.1",
+    "popper.js": "^1.16.1",
+    "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "webpack-dev-middleware": ">=6.1.2",
