--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -10,6 +10,8 @@
   "version": "2.0.0",
   "tasks": [
     {
+      "label": "npmStart",
+      "detail": "To run Angular before launch the browser",
       "type": "npm",
       "script": "start",
       "isBackground": true,
@@ -28,6 +30,8 @@
       }
     },
     {
+      "label": "npmTest",
+      "detail": "To test Angular before launch the browser",
       "type": "npm",
       "script": "test",
       "isBackground": true,
