--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "gh-build": "ng build --configuration github --base-href /Inote_BrowserInterface/",
     "watch": "ng build --watch --configuration development",
     "test": "CHROME_BIN=/usr/bin/brave-browser ng test",
-    "test-graphic": "CHROME_BIN=/usr/bin/brave-browser ng test --browsers Firefox,Chromium",
+    "test-firefox": "ng test --browsers FirefoxHeadless,Firefox",
+    "test-brave": "CHROME_BIN=/usr/bin/brave-browser ng test --browsers ChromeHeadless,Chrome",
     "lint": "ng lint"
   },
   "private": true,
